# maestro

./: .gitignore  CONCURRENT_EXECUTION.md  Initial setting.txt  README.md  TEST_DAG.yaml  TEST_SUITE.md  allskipped_test.yaml  debug_task_execution.py  folder_structure.txt  maestro.db  maestro.db.BACKUP_MANUALE  migrate_db.py  output.txt  pyproject.toml  pytest.ini  run_tests.sh  test_1.yaml  test_2.yaml  test_3.yaml  test_4.yaml  test_dag_status.py  test_maestro_docker.db  test_maestro_docker.db-shm  test_maestro_docker.db-wal  test_run_dag.py
.github/workflows/: test.yml
docs/: DAG_START_TIME.md  open_issues.md
examples/: 1.2.1.Long_waits.yaml  1.3.3.Parallel_heavy_bash_python.yaml  2.2.1.bash_chain_plus_scan.yaml  2.2.3.bash_chain_with_error_handling.yaml  3.1.1.Wait_and_retry.yaml  3.2.1.wait_and_retry_with_logging.yaml  3.2.2.wait_and_retry_bash_python_mix.yaml  4.1.1.Conditional_branching.yaml  4.2.2.conditional_branching_with_bash.yaml  4.3.2.conditional_branching_matrix.yaml  5.3.2.cron_heartbeat_with_warnings.yaml  6.3.1.scheduled_greeting_full_healthcheck.yaml  7.2.3.mixed_execution_random_data.yaml  7.3.2.mixed_execution_transform_tree.yaml  7.3.3.mixed_execution_hyperpipeline.yaml  8.1.1.save_and_reload_basic.yaml  8.3.1.csv_fanout_merge.yaml  8.3.2.deep_transform_tree.yaml  sample_dag.yaml  sample_dag2.yaml
examples/1_Old_examples/: dag_id_generation_example.md  long_sample_dag.yaml  scheduled_dag.yaml  simple_test_dag.yaml  test_dag.yaml
examples/2_New_examples/: 1.1.1.Basic_linear.yaml  1.2.1.Long_waits.yaml  1.2.2.Parallel_then_join.yaml  1.2.3.Bash_python_mix.yaml  1.3.1.Branching_waits_and_joins.yaml  1.3.2.Cascade_retry_delays.yaml  1.3.3.Parallel_heavy_bash_python.yaml  1_basic_linear.yaml  2.1.1.Bash_chain.yaml  2.2.1.bash_chain_plus_scan.yaml  2.2.2.bash_chain_branch.yaml  2.2.3.bash_chain_with_error_handling.yaml  2.3.1.bash_chain_heavy_diamond.yaml  2.3.2.bash_chain_error_storm.yaml  2.3.3.bash_chain_long_pipeline.yaml  2_bash_chain.yaml  3.2.1.wait_and_retry_with_logging.yaml  3.2.2.wait_and_retry_bash_python_mix.yaml  3.2.3.wait_and_retry_branching.yaml  3.3.1.wait_and_retry_heavy_parallel.yaml  3.3.2.wait_and_retry_cascade_failures.yaml  3.3.3.wait_and_retry_spiderweb.yaml  3_wait_and_retry.yaml  4.1.1.Conditional_branching.yaml  4.1.2. WORKING_Conditional_branching.yaml  4.2.1.conditional_branching_extended.yaml  4.2.2.conditional_branching_with_bash.yaml  4.2.3.conditional_branching_parallel_python.yaml  4.3.1.conditional_branching_triple_tree.yaml  4.3.2.conditional_branching_matrix.yaml  4.3.3.conditional_branching_hypergraph.yaml  4_conditional_branching.yaml  5.2.1.cron_heartbeat_extended.yaml  5.2.2.cron_heartbeat_with_status.yaml  5.2.3.cron_heartbeat_light_checks.yaml  5.3.1.cron_heartbeat_full_healthcheck.yaml  5.3.2.cron_heartbeat_with_warnings.yaml  5.3.3.cron_heartbeat_deep_pipeline.yaml  5_cron_heartbeat.yaml  6.2.1.scheduled_greeting_extended.yaml  (+19 more)
examples/Old_examples/: cron_examples_dag.yaml  cron_scheduled_dag.yaml
examples/Old_examples/terraform/: terraform.tfstate
examples/terraform/: .terraform.lock.hcl  terraform.tfstate.backup  tfplan
src/maestro/: Orchestrator_structure  Roadmap - Dependency policy  __init__.py  cli.py  cli_client.py  cli_concurrent.py  cli_modern.py
src/maestro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/maestro/client/: __init__.py  api_client.py  cli.py
src/maestro/core/: Task_Registry.py  dag.py  dag_loader.py  models.py  orchestrator.py  status_manager.py  task.py
src/maestro/core/executors/: base.py  docker.py  factory.py  kubernetes.py  local.py  ssh.py
src/maestro/server/: __init__.py  app.py  docker_api.py  schedulers.py
src/maestro/server/api/v1/: router.py
src/maestro/server/api/v1/routes/: __init__.py  dags.py  health.py  logs.py
src/maestro/server/internals/: __init__.py  dag_loader.py  models.py  orchestrator.py  status_manager.py  task_registry.py
src/maestro/server/internals/executors/: base.py  docker.py  factory.py  kubernetes.py  local.py  ssh.py
src/maestro/server/services/: scheduler_service.py
src/maestro/server/tasks/: __init__.py  base.py  bash_task.py  file_writer_task.py  print_task.py  python_task.py  wait_task.py
src/maestro/shared/: __init__.py  dag.py  task.py
src/maestro/tasks/: ansible_task.py  base.py  extended_terraform_task.py  file_writer_task.py  print_task.py  terraform_task.py  wait_task.py
src/maestro/utils/: legacy_ui.py
tests/: conftest.py  maestro.db  test_ansible_task.py  test_api_client.py  test_base_task.py  test_bash_task.py  test_cli_attach.py  test_cli_client.py  test_cli_integration.py  test_concurrent_execution.py  test_cron_feature.py  test_dag.py  test_dag_id_generation.py  test_dag_loader.py  test_db_feature.py  test_docker_api.py  test_enhanced_cli.py  test_extended_terraform_task.py  test_multi_executor.py  test_orchestrator_dagloader.py  test_print_task.py  test_python_task.py  test_server.py  test_status_manager.py  test_task_registry.py
tests/Vecchi_test/: conftest.py  test_ansible_task.py  test_cli_attach.py  test_dag.py  test_dag_id_generation.py  test_extended_terraform_task.py  test_multi_executor.py  test_status_manager.py
tests/Vecchi_test/integration/: test_debug_server.py
tests/Work_in_progress/: test_status_manager.py
tests/integration/: conftest.py  test_cli_rest_integration.py  test_server_api_integration.py
