[project]
name = "maestro"
version = "0.0.5"
description = "A simple Python task orchestrator"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "pyyaml>=6.0",
    "networkx>=3.1",
    "rich",
    "ansible_runner>=2.3.1",
    "pydantic>=2.0",
    "typer>=0.12.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "croniter>=1.3.0"
]

[project.scripts]
maestro = "maestro.cli_client:app"
maestro-server = "maestro.server.app:start_server"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "freezegun>=1.2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "freezegun>=1.5.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "responses>=0.25.7",
]

